--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!--Övre del av webbsidan-->
     <div class="banner">    
         <h1>Official Website Of Crni Jastrebovi</h1>
-        <img id="bild" src="./bilder/CJ.BiH.png" alt="">
+        <img id="bild" src="https://mail.google.com/mail/u/0?ui=2&ik=cf8df48d93&attid=0.1&permmsgid=msg-f:1744327075668437805&th=1835183bc5502b2d&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ-IoAwJmAtVArzia_dJfE2tznHeW0U9mZMCpKNYqokGOW5Zf3QEFTTWvBvW4TVkS7lttnkA7u5Tjn-UU-Ky6_AGqt0uLtpAyRNzLYZ3XlIk7VRy2d87bk8kEFE&disp=emb&realattid=183518365e9cf7dc8761" alt="">
         <p> This Is A Website Dedicated To Crni Jastrebovi </p>
         <button> +1 Balkan-ness </button>
     </div>
@@ -56,9 +56,9 @@
         <div class="teams">
             <ul>
                 <li>
-                    <img id="bil" src="./bilder/Football_Association_of_Bosnia_and_Herzegovina_logo.svg.png" alt=""> 
-                    <img id="bll" src="./bilder/Bosnian_and_Herzegovinian_Basketball_Federation.png" alt=""> 
-                    <img id="bdd" src="./bilder/Bosnia_and_Herzegovina_national_handball_team_logo.png" alt="">
+                    <img id="bil" src="https://upload.wikimedia.org/wikipedia/en/thumb/d/da/Football_Association_of_Bosnia_and_Herzegovina_logo.svg/270px-Football_Association_of_Bosnia_and_Herzegovina_logo.svg.png" alt=""> 
+                    <img id="bll" src="https://upload.wikimedia.org/wikipedia/en/2/20/Bosnian_and_Herzegovinian_Basketball_Federation.png" alt=""> 
+                    <img id="bdd" src="https://upload.wikimedia.org/wikipedia/en/5/56/Bosnia_and_Herzegovina_national_handball_team_logo.png" alt="">
                 </li>
             </ul>
         </div>
